libs/preprocessor/tests/errors/pe13_include_not_encased/stderr.ansi
[31m[PE13] Error:[0m include not encased
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:1:10[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m#[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mc[0m[38;5;249ml[0m[38;5;249mu[0m[38;5;249md[0m[38;5;249me[0m[38;5;249m [0m[38;5;201m<[0m[38;5;201ms[0m[38;5;201mo[0m[38;5;201mm[0m[38;5;201me[0m[38;5;201mt[0m[38;5;201mh[0m[38;5;201mi[0m[38;5;201mn[0m[38;5;201mg[0m[38;5;201m.[0m[38;5;201mh[0m[38;5;201mp[0m[38;5;201mp[0m
 [38;5;240m  │[0m          [38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m  
 [38;5;240m  │[0m                 [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m try `[38;5;201mhpp>[0m`
[38;5;246m───╯[0m
